add image asset

--- a/app/assets/stylesheets/jquery.readableXML.css.erb
+++ b/app/assets/stylesheets/jquery.readableXML.css.erb
@@ -66,7 +66,7 @@
 
 .r-minus {
 	display: block;
-	background-image: url(../assets/jquery.readableXML.png);
+	background-image: url(<%= asset_path('jquery.readableXML.png') %>);
 	background-repeat: no-repeat;
 	text-indent: -99999px;
 	overflow: hidden;
@@ -95,8 +95,7 @@
 	text-indent: 0;
 	word-wrap: break-word;
 }*/
-.
-r-cdata {
+.r-cdata {
 	clear: both;
 	padding-left: 20px;
 }
